@@ -1,3 +1,5 @@
+20020720
+	* added mark target+match
 20020714
 	* added --atomic options
 20020710
